# backend/docs/openapi.yaml
@@ -94,6 +94,7 @@ components:
         - id
         - year
         - url
+        - winner
       properties:
         id:
           type: integer
@@ -105,6 +106,9 @@ components:
           type: string
           format: uri
           example: https://en.wikipedia.org/wiki/2020_Formula_One_World_Championship
+        winner:
+          type: string
+          example: "hamilton"
 
     SeasonsResponse:
       type: array
@@ -162,7 +166,10 @@ components:
             givenName: "Lewis"
             familyName: "Hamilton"
             isSeasonChampion: true
-
+    RacesResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/Race'
 
     ErrorResponse:
       type: object
