# backend/src/api/seasons/seasons.mapper.ts
@@ -1,10 +1,13 @@
 import { Season as ApiSeason } from '@f1/types/api-schemas';
-import { Season as PrismaSeason } from '@prisma/client';
+import { SeasonWithChampion } from './types';
 
-export function mapSeason(prismaSeason: PrismaSeason): ApiSeason {
+export function mapSeason(prismaSeason: SeasonWithChampion): ApiSeason {
   return {
     id: prismaSeason.id,
     year: prismaSeason.year,
     url: prismaSeason.wikiUrl,
+    winner:
+      `${prismaSeason.champion?.givenName} ${prismaSeason.champion?.familyName}`.trim() ||
+      'Unknown',
   };
 }
